tests/lean/local_notation_bug2.lean.expected.out
local_notation_bug2.lean:7:6: error: unexpected token
